# py_cub_front_data_ingestion

./: .env  .gitignore  CORS_FIX.md  DAILY_ENTRIES_FIX.md  DEBUG_JSON_FORMAT.md  DUPLICATES_UI_FIX.md  INTEGRATION_GUIDE.md  README.md  RECORDS_PROCESSED_FIX.md  clear_frontend_data.md  demo_json_barcelona_1854.json  demo_json_buenos_aires_1852.json  demo_json_casos_especiales.json  demo_json_completo_habana_1903.json  demo_json_marsella_1855.json  demo_json_transatlantico_1860.json  docker-compose.dev.yml  docker-compose.yml  docker-run.sh  index.html  package-lock.json  package.json  test_api_completo.py  test_api_funcionalidades_especificas.py  test_cargo_dict.json  test_data.json  test_ingestion_with_records.py  test_json_fixed.json  test_minimal.json  test_portada_format.json  test_portada_multiple_entries.json  test_records_processed_fix.py  test_results.json  test_upload_files.json  test_upload_fix.md  test_validacion_datos_reales.py
backend/: .env  .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  start.sh
backend/app/: __init__.py
backend/app/api/: __init__.py
backend/app/core/: app_factory.py  config.py  config_manager.py  exceptions.py  initializer.py  logging.py  middleware.py  service_container.py  session_middleware.py  startup_validator.py
backend/app/database/: __init__.py  database_service.py  models.py
backend/app/models/: __init__.py  analysis.py  ingestion.py
backend/app/services/: auth_service.py  concurrent_upload_manager.py  enhanced_file_handler.py  entity_validator.py  file_service.py  portada_service.py  task_service.py
backend/app/session/: __init__.py  session_cleanup.py  session_manager.py
backend/app/storage/: __init__.py  (+2 more)
(+495 files in other folders)
